--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,16 @@
 * {
-    font-family: 'Biryani';
+  font-family: "Biryani";
 }
 
 html {
-    margin: 0px;
-    scroll-behavior: smooth;
-    /* width:100%; */
-    overflow-x:hidden;
+  margin: 0px;
+  scroll-behavior: smooth;
+  /* width:100%; */
+  overflow-x: hidden;
 }
 
-body{
-    overflow-x: hidden;
+body {
+  overflow-x: hidden;
 }
 
 /* .splash {
@@ -22,207 +22,226 @@ body{
 } */
 
 .splash-text {
-    color: #FFF;
-    text-align: center;
-    text-shadow: 5px 17px 12px 0px rgba(0, 0, 0, 0.25);
-    font-family: 'Poppins';
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 24px; /* 60% */
+  color: #fff;
+  text-align: center;
+  text-shadow: 5px 17px 12px 0px rgba(0, 0, 0, 0.25);
+  font-family: "Poppins";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 24px; /* 60% */
 }
 
 .elementToFadeInAndOut {
-    padding-top: 20%;
-    text-align: center;
-    position: absolute;
-    background-color: #AE3A5E;
-    z-index: 2;
-    animation: fadeinout 2s linear forwards;
-    -webkit-animation: fadeinout 2s linear forwards;
-    width: 100%;
-    height: 100%;
+  padding-top: 20%;
+  text-align: center;
+  position: absolute;
+  background-color: #ae3a5e;
+  z-index: 2;
+  animation: fadeinout 2s linear forwards;
+  -webkit-animation: fadeinout 2s linear forwards;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes fadeinout {
-  0% { opacity: 1; }
-  50% {opacity: 1; }
-  75% {opacity: 1; }
-  100% {opacity: 0;visibility: hidden;} 
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .main {
-    padding: 0px;
-    margin: 0px;
-    
+  padding: 0px;
+  margin: 0px;
 }
 
 .hero {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
 }
 
-.navbar-brand, .nav-link, .collapse, .container-fluid, .bg-body-tertiary {
-    background-color: #AE3A5E !important; 
-    color: white;
+.navbar-brand,
+.nav-link,
+.collapse,
+.container-fluid,
+.bg-body-tertiary {
+  background-color: #ae3a5e !important;
+  color: white;
 }
 
-.navi{
-    position: fixed;
-    width: 100%;
-    z-index: 1;
+.navi {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .navbar-custom {
-    display: flex;
-    height: 70px;
-    padding: 16px 80px;
-    align-items: center;
-    flex-shrink: 0;
+  display: flex;
+  height: 70px;
+  padding: 16px 80px;
+  align-items: center;
+  flex-shrink: 0;
 }
 
 .why-us {
-    position: relative;
-    text-align: center;
-    color: black;
+  position: relative;
+  text-align: center;
+  color: black;
 }
 
 .features {
-    padding: 7% 10%;
-    text-align: center;
-    line-height: 1.5;
-    background-color: whitesmoke;
-    position: relative;
+  padding: 7% 10%;
+  text-align: center;
+  line-height: 1.5;
+  background-color: whitesmoke;
+  position: relative;
 }
 .feature-box {
-    padding: 5%;
+  padding: 5%;
 }
 
 #instruments {
-    width: 100%;
-    height: 230%;
-    background:url(/images/bg-3.png), linear-gradient(90deg, rgba(0, 0, 0, 0.50) 2.08%, rgba(0, 0, 0, 0.00) 100%), #4A3F74;;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-blend-mode: multiply;
+  width: 100%;
+  height: 230%;
+  background: url(/images/bg-3.png),
+    linear-gradient(90deg, rgba(0, 0, 0, 0.5) 2.08%, rgba(0, 0, 0, 0) 100%),
+    #4a3f74;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
 }
 
 .instrument {
-    height: 250px;
-    width: 250px;
-    padding: 10%;
-    text-align: center;
-    background: linear-gradient(180deg, #C66100 50%, rgba(198, 97, 0, 0.00) 100%);
-    background-blend-mode: color-burn;
-    mix-blend-mode: screen;
-    border-top-left-radius: 12%;
-    border-top-right-radius: 12%;
+  height: 250px;
+  width: 250px;
+  padding: 10%;
+  text-align: center;
+  background: linear-gradient(180deg, #c66100 50%, rgba(198, 97, 0, 0) 100%);
+  background-blend-mode: color-burn;
+  mix-blend-mode: screen;
+  border-top-left-radius: 12%;
+  border-top-right-radius: 12%;
 }
 
 .col {
-    text-align: center;
+  text-align: center;
 }
 
 .col1 {
-    width: 250px;
-    height: 250px;
-    margin: 15%;
+  width: 250px;
+  height: 250px;
+  margin: 15%;
 }
 
 .col1:hover {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
-    transition: 1s ease;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 1s ease;
 }
 
 .inst-text {
-    text-align: center;
-    color: white;
-    height: 48px;
-    width: 250px;
-    padding: 12px;
+  text-align: center;
+  color: white;
+  height: 48px;
+  width: 250px;
+  padding: 12px;
 
-    border-radius: 0px 0px 12px 12px;
-    background: radial-gradient(242.23% 241.86% at 53.72% -58.25%, #1C1E23 0%, rgba(64, 70, 87, 0.00) 100%);
-    backdrop-filter: blur(34px);
-
+  border-radius: 0px 0px 12px 12px;
+  background: radial-gradient(
+    242.23% 241.86% at 53.72% -58.25%,
+    #1c1e23 0%,
+    rgba(64, 70, 87, 0) 100%
+  );
+  backdrop-filter: blur(34px);
 }
 
 footer {
-    background-color: #AE3A5E;
-    height: 13%;
-    text-align: center;
+  background-color: #ae3a5e;
+  height: 13%;
+  text-align: center;
 }
 
 .footer {
-    color: white;
-    padding-top: 20px;
+  color: white;
+  padding-top: 20px;
 }
 
 /* small and medium laptop screens */
-@media (min-width : 991px) and (max-width : 1430px) {
-    .instrument, .col1 {
-        height:200px;
-        width: 200px;
-    }
-    .inst-text {
-        width: 200px;
-    }
+@media (min-width: 991px) and (max-width: 1430px) {
+  .instrument,
+  .col1 {
+    height: 200px;
+    width: 200px;
+  }
+  .inst-text {
+    width: 200px;
+  }
 
-    #instruments {
-        height: 120%;
-    }
+  #instruments {
+    height: 120%;
+  }
 
-    .logo {
-        height: 70px !important;
-        width: 70px !important;
-    }
+  .logo {
+    height: 70px !important;
+    width: 70px !important;
+  }
 }
 /* Large laptop screens */
-@media (min-width : 1439px){
-    #instruments {
-        height: 120%;
-    }
+@media (min-width: 1439px) {
+  #instruments {
+    height: 120%;
+  }
 }
 /* screens below tablets */
-@media (max-width : 767px){
-    #instruments {
-        height: 470%;
-    }
-    .logo {
-        height: 40px !important;
-        width: 40px !important;
-    }
+@media (max-width: 767px) {
+  #instruments {
+    height: 470%;
+  }
+  .logo {
+    height: 40px !important;
+    width: 40px !important;
+  }
 }
 
 /* For mobile phones */
-@media (max-width : 430px){
-    .navbar-brand {
-        align-items: right;
-        font-size: 20px;
-    }
+@media (max-width: 430px) {
+  .navbar-brand {
+    align-items: right;
+    font-size: 20px;
+  }
 
-    .logo {
-        height: 40px !important;
-        width: 40px !important;
-    }
+  .logo {
+    height: 40px !important;
+    width: 40px !important;
+  }
 
-    .container-fluid {
-        width: 800px;
-    }
+  .container-fluid {
+    width: 800px;
+  }
 
-    .navbar-toggler , .navbar-toggler-icon {
-        padding: 3px !important;
-    }
+  .navbar-toggler,
+  .navbar-toggler-icon {
+    padding: 3px !important;
+  }
 
-    .navbar-custom {
-        padding: 5px 5px;
-    }
+  .navbar-custom {
+    padding: 5px 5px;
+  }
 
-    .splash-img {
-        width: 100%;
-    }
+  .splash-img {
+    width: 100%;
+  }
 }
