--- a/instruments/instrument-styles.css
+++ b/instruments/instrument-styles.css
@@ -1,277 +1,293 @@
 * {
-    font-family: 'Biryani';
+  font-family: "Biryani";
 }
 
 html {
-    margin: 0px;
-    scroll-behavior: smooth;
-    /* width:100%; */
-    overflow-x:hidden;
+  margin: 0px;
+  scroll-behavior: smooth;
+  /* width:100%; */
+  overflow-x: hidden;
 }
 
-body{
-    overflow-x: hidden;
-    background-color: #141129;
-    color: white;
+body {
+  overflow-x: hidden;
+  background-color: #141129;
+  color: white;
 }
 
 .main {
-    padding: 0px;
-    margin: 0px;
-    
+  padding: 0px;
+  margin: 0px;
 }
 
-.navbar-brand, .nav-link, .collapse, .container-fluid, .bg-body-tertiary {
-    background-color: #AE3A5E !important; 
-    color: white;
+.navbar-brand,
+.nav-link,
+.collapse,
+.container-fluid,
+.bg-body-tertiary {
+  background-color: #ae3a5e !important;
+  color: white;
 }
 
-.navi{
-    position: fixed;
-    width: 100%;
-    z-index: 2;
+.navi {
+  position: fixed;
+  width: 100%;
+  z-index: 3;
 }
 
 .navbar-custom {
-    display: flex;
-    height: 70px;
-    padding: 16px 80px;
-    align-items: center;
-    flex-shrink: 0;
+  display: flex;
+  height: 60px;
+  padding: 16px 80px;
+  align-items: center;
+  flex-shrink: 0;
 }
 
 footer {
-    background-color: #AE3A5E;
-    height: 13%;
-    text-align: center;
+  background-color: #ae3a5e;
+  height: 13%;
+  text-align: center;
 }
 
 .footer {
-    color: white;
-    padding-top: 20px;
+  color: white;
+  padding-top: 20px;
 }
 
 .pressed {
-    box-shadow: 0 3px 4px 0 #DBEDF3;
-    opacity: 0.5;
-  }
-  
+  box-shadow: 0 3px 4px 0 #dbedf3;
+  opacity: 0.5;
+}
 
 .play {
-    width: 100%;
-    height: auto;
-    margin-top: 5%;
-    text-align: center;
-    padding: 80px 260px;
+  width: 100%;
+  height: auto;
+  margin-top: 5%;
+  text-align: center;
+  padding: 80px 260px;
 }
 
 .responsive-img {
-    width: 100%;
-    height: auto;
-    padding: 10% 10% 6% 10%;
-    z-index: 1;
+  width: 100%;
+  height: auto;
+  padding: 10% 10% 6% 10%;
 }
 
 .eclipse {
-    position: absolute;
-    right: 0%;
-    border-top-right-radius: 120px;
-    opacity: 0.7;
-    height: auto;
+  position: absolute;
+  right: 0%;
+  border-top-right-radius: 120px;
+  opacity: 0.6;
+  height: auto;
 }
 
 .eclipse2 {
-    position: absolute;
-    left: 0%;
-    bottom: 80px;
-    height: 80%;
-    width: 80%;
-    border-top-left-radius: 70px;
-    border-bottom-left-radius: 70px;
-    opacity: 0.6;
+  position: absolute;
+  left: 0%;
+  bottom: 80px;
+  height: 80%;
+  width: 80%;
+  border-top-left-radius: 70px;
+  border-bottom-left-radius: 70px;
+  opacity: 0.6;
 }
 
 .glass {
-    border-radius: 120px;
-    background: linear-gradient(136deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.02) 100%);
-    backdrop-filter: blur(100%);
+  border-radius: 120px;
+  background: linear-gradient(
+    136deg,
+    rgba(255, 255, 255, 0.05) 0%,
+    rgba(255, 255, 255, 0.02) 100%
+  );
+  backdrop-filter: blur(100%);
 }
 
 .button {
-    background-color: #72AC51;
-    color: white;
-    position: absolute;
-    border-radius: 50%;
+  background-color: #72ac51;
+  color: white;
+  position: absolute;
+  border-radius: 50%;
+  z-index: 1;
 }
 
 .X {
-    right: 51.5%;
-    top: 58%;
+  right: 51.5%;
+  top: 52%;
 }
 
 .Y {
-    right: 72%;
-    top: 15%;
+  right: 68%;
+  top: 15%;
 }
 
 .U {
-    right: 20%;
-    top: 22%;
+  right: 25%;
+  top: 22%;
 }
 
 .R {
-    right: 88%;
-    top: 31%;
+  right: 80%;
+  top: 30%;
 }
 
 .E {
-    right: 88%;
-    top: 22%;
+  right: 80%;
+  top: 20%;
 }
 
 .C {
-    right: 88%;
-    top: 80%;
+  right: 80%;
+  top: 72%;
 }
 
 .S {
-    right: 80%;
-    top: 42%;
+  right: 74.5%;
+  top: 38%;
 }
 
 .D {
-    right: 72%;
-    top: 42%;
+  right: 68%;
+  top: 38%;
 }
 
 .G {
-    right: 56%;
-    top: 35%;
+  right: 57.5%;
+  top: 32%;
 }
 
+.H {
+  right: 43%;
+  top: 32%;
+}
+
+.J {
+  right: 29%;
+  top: 52%;
+}
 
 /* small and medium laptop screens */
-@media (min-width : 991px) and (max-width : 1430px) {
-    .instrument, .col1 {
-        height:200px;
-        width: 200px;
-    }
-    .inst-text {
-        width: 200px;
-    }
+@media (min-width: 991px) and (max-width: 1430px) {
+  .instrument,
+  .col1 {
+    height: 200px;
+    width: 200px;
+  }
+  .inst-text {
+    width: 200px;
+  }
 
-    .logo {
-        height: 70px !important;
-        width: 70px !important;
-    }
+  .logo {
+    height: 70px !important;
+    width: 70px !important;
+  }
 
-    .responsive-img {
-        width: 70%;
-        height: auto;
-        padding-top: 10%;
-    }
+  .responsive-img {
+    width: 70%;
+    height: auto;
+    padding-top: 10%;
+  }
 }
 /* Large laptop screens */
-@media (min-width : 1439px){
-    .responsive-img {
-        width: 100%;
-        height: auto;
-        padding-top: 5%;
-    }
+@media (min-width: 1439px) {
+  .responsive-img {
+    width: 100%;
+    height: auto;
+    padding-top: 5%;
+  }
 
-    .play {
-        margin-top: 5%;
-    }
+  .play {
+    margin-top: 5%;
+  }
 }
 /* screens below tablets */
-@media (max-width : 767px){
-    .logo {
-        height: 40px !important;
-        width: 40px !important;
-    }
+@media (max-width: 767px) {
+  .logo {
+    height: 40px !important;
+    width: 40px !important;
+  }
 
-    .play {
-        padding: 15% 0% 5% 0%;
-    }
+  .play {
+    padding: 15% 0% 5% 0%;
+  }
 
-    .responsive-img {
-        width: 90%;
-        height: auto;
-        padding-top: 5%;
-    }
+  .responsive-img {
+    width: 90%;
+    height: auto;
+    padding-top: 5%;
+  }
 
-    .eclipse, .eclipse2 {
-        visibility: hidden;
-    }
+  .eclipse,
+  .eclipse2 {
+    visibility: hidden;
+  }
 }
 
 /* For mobile phones */
-@media (max-width : 430px){
-    .navbar-brand {
-        align-items: right;
-        font-size: 20px;
-    }
+@media (max-width: 430px) {
+  .navbar-brand {
+    align-items: right;
+    font-size: 20px;
+  }
 
-    .logo {
-        height: 40px !important;
-        width: 40px !important;
-    }
+  .logo {
+    height: 40px !important;
+    width: 40px !important;
+  }
 
-    .container-fluid {
-        width: 800px;
-    }
+  .container-fluid {
+    width: 800px;
+  }
 
-    .navbar-toggler , .navbar-toggler-icon {
-        padding: 3px !important;
-    }
+  .navbar-toggler,
+  .navbar-toggler-icon {
+    padding: 3px !important;
+  }
 
-    .navbar-custom {
-        padding: 5px 5px;
-    }
+  .navbar-custom {
+    padding: 5px 5px;
+  }
 
-    .play {
-        padding: 20% 0% 5% 0%;
-    }
+  .play {
+    padding: 20% 0% 5% 0%;
+  }
 
-    .Y {
-        right: 68%;
-        top: 16%;
-    }
+  .Y {
+    right: 68%;
+    top: 16%;
+  }
 
-    .U {
-        right: 18%;
-        top: 22%;
-    }
+  .U {
+    right: 18%;
+    top: 22%;
+  }
 
-    .X {
-        right: 50%;
-        top: 55%;
-    }
+  .X {
+    right: 50%;
+    top: 55%;
+  }
 
-    .R {
-        right: 86%;
-        top: 35%;
-    }
+  .R {
+    right: 86%;
+    top: 35%;
+  }
 
-    .E {
-        right: 86%;
-        top: 20%;
-    }
+  .E {
+    right: 86%;
+    top: 20%;
+  }
 
-    .C {
-        right: 85%;
-        top: 80%;
-    }
+  .C {
+    right: 85%;
+    top: 80%;
+  }
 
-    .S {
-        right: 78.5%;
-        top: 42%;
-    }
+  .S {
+    right: 78.5%;
+    top: 42%;
+  }
 
-    .D {
-        right: 70%;
-        top: 42%;
-    }
-    
-    
+  .D {
+    right: 70%;
+    top: 42%;
+  }
 }
