--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ body {
 #instruments {
   width: 100%;
   height: 230%;
-  background: url(/images/bg-3.png),
+  background: url(./images/bg-3.png),
     linear-gradient(90deg, rgba(0, 0, 0, 0.5) 2.08%, rgba(0, 0, 0, 0) 100%),
     #4a3f74;
   background-repeat: no-repeat;
