--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
   padding-top: 20%;
   text-align: center;
   position: absolute;
-  background-color: #ae3a5e;
+  background-color: #7b2943;
   z-index: 2;
   animation: fadeinout 2s linear forwards;
   -webkit-animation: fadeinout 2s linear forwards;
@@ -76,7 +76,8 @@ body {
 .collapse,
 .container-fluid,
 .bg-body-tertiary {
-  background-color: #ae3a5e !important;
+  /* background-color: #ae3a5e !important; */
+  background-color: #7b2943 !important;
   color: white;
 }
 
@@ -104,11 +105,23 @@ body {
   padding: 7% 10%;
   text-align: center;
   line-height: 1.5;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
+  color: #95cfec;
+  text-shadow: 1px 1px 2px black, 0 0 0.2em aqua, 0 0 0.1em aqua;
+  background-color: #141129;
   position: relative;
+  font-family: "Outfit" !important;
 }
+
 .feature-box {
   padding: 5%;
+}
+
+.glow {
+  text-shadow: 1px 1px 2px black, 0 0 0.1em aqua, 0 0 0.1em aqua;
+  color: #95cfec;
+  font-size: 30px;
+  padding-top: 5%;
 }
 
 #instruments {
@@ -168,8 +181,37 @@ body {
   backdrop-filter: blur(34px);
 }
 
+.eclipse {
+  position: absolute;
+  right: 8.3%;
+  border-top-right-radius: 35px;
+  opacity: 0.6;
+  height: 50%;
+}
+
+.eclipse2 {
+  position: absolute;
+  left: 8.5%;
+  bottom: 80px;
+  height: 50%;
+  width: 50%;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  opacity: 0.6;
+}
+
+.glass {
+  background: linear-gradient(
+    136deg,
+    rgba(255, 255, 255, 0.05) 0%,
+    rgba(255, 255, 255, 0.02) 100%
+  );
+  backdrop-filter: blur(100%);
+  border-radius: 25px;
+}
+
 footer {
-  background-color: #ae3a5e;
+  background-color: #7b2943;
   height: 13%;
   text-align: center;
 }
@@ -276,4 +318,214 @@ footer {
   .splash-img {
     width: 100%;
   }
+
+  .eclipse {
+    position: absolute;
+    right: 2.9%;
+    border-top-right-radius: 72px;
+    opacity: 0.6;
+    height: 50%;
+  }
+
+  .eclipse2 {
+    position: absolute;
+    left: 3%;
+    bottom: 80px;
+    height: 50%;
+    width: 50%;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    opacity: 0.6;
+  }
+}
+
+#selection {
+  background-color: #141129;
+  padding: 20px 0px;
+}
+
+@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+.card {
+  position: absolute;
+  width: 60%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: transform 0.4s ease;
+  cursor: pointer;
+}
+
+.container {
+  width: 100%;
+  max-width: 800px;
+  max-height: 600px;
+  height: 100%;
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cards {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+#item-1:checked ~ .cards #song-5,
+#item-2:checked ~ .cards #song-1,
+#item-3:checked ~ .cards #song-2,
+#item-4:checked ~ .cards #song-3,
+#item-5:checked ~ .cards #song-4 {
+  transform: translatex(-40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-2,
+#item-2:checked ~ .cards #song-3,
+#item-3:checked ~ .cards #song-4,
+#item-4:checked ~ .cards #song-5,
+#item-5:checked ~ .cards #song-1 {
+  transform: translatex(40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-1,
+#item-2:checked ~ .cards #song-2,
+#item-3:checked ~ .cards #song-3,
+#item-4:checked ~ .cards #song-4,
+#item-5:checked ~ .cards #song-5 {
+  transform: translatex(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+
+  img {
+    box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
+  }
+}
+
+.player {
+  background-color: #7b2943;
+  border-radius: 8px;
+  min-width: 320px;
+  padding: 16px 10px;
+}
+
+.upper-part {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  height: 36px;
+  overflow: hidden;
+}
+
+.play-icon {
+  margin-right: 10px;
+}
+
+.song-info {
+  width: calc(100% - 32px);
+  display: block;
+}
+
+.song-info .title {
+  color: white;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.sub-line {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.subtitle,
+.time {
+  font-size: 12px;
+  line-height: 16px;
+  color: #c6c5c6;
+}
+
+.time {
+  font-size: 12px;
+  line-height: 16px;
+  color: #a5a5a5;
+  font-weight: 500;
+  margin-left: auto;
+}
+
+.progress-bar {
+  height: 3px;
+  width: 100%;
+  background-color: #e9efff;
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.progress {
+  display: block;
+  position: relative;
+  width: 60%;
+  height: 100%;
+  background-color: #2992dc;
+  border-radius: 6px;
+}
+
+.info-area {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 30px;
+  transition: transform 0.4s ease-in;
+}
+
+#item-2:checked ~ .player #test {
+  transform: translateY(0);
+}
+
+#item-2:checked ~ .player #test {
+  transform: translateY(-40px);
+}
+
+#item-3:checked ~ .player #test {
+  transform: translateY(-80px);
+}
+
+#item-4:checked ~ .player #test {
+  transform: translateY(-120px);
+}
+
+#item-5:checked ~ .player #test {
+  transform: translateY(-160px);
 }
