--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,11 @@ body {
   transition: 1s ease;
 }
 
+.big {
+  font-weight: 900;
+  font-size: 75px;
+}
+
 .inst-text {
   text-align: center;
   color: white;
@@ -319,10 +324,15 @@ footer {
     width: 100%;
   }
 
+  .big {
+    font-weight: 900;
+    font-size: 40px;
+  }
+
   .eclipse {
     position: absolute;
-    right: 2.9%;
-    border-top-right-radius: 72px;
+    right: 4%;
+    border-top-right-radius: 42px;
     opacity: 0.6;
     height: 50%;
   }
@@ -345,18 +355,6 @@ footer {
 }
 
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
-
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
 
 input[type="radio"] {
   display: none;
@@ -395,7 +393,7 @@ input[type="radio"] {
 .card img {
   width: 100%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 4px;
   object-fit: cover;
 }
 
