--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,30 @@ html {
 
 body {
   overflow-x: hidden;
+  background-color: #141129;
+}
+
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
 
 /* .splash {
@@ -36,7 +60,7 @@ body {
   padding-top: 20%;
   text-align: center;
   position: absolute;
-  background-color: #7b2943;
+  background-color: #141129;
   z-index: 2;
   animation: fadeinout 2s linear forwards;
   -webkit-animation: fadeinout 2s linear forwards;
@@ -77,7 +101,7 @@ body {
 .container-fluid,
 .bg-body-tertiary {
   /* background-color: #ae3a5e !important; */
-  background-color: #7b2943 !important;
+  background-color: #141129 !important;
   color: white;
 }
 
@@ -93,6 +117,13 @@ body {
   padding: 16px 80px;
   align-items: center;
   flex-shrink: 0;
+  border-bottom-width: 1px;
+  border-color: #00c6ff;
+  border-bottom-style: dashed;
+}
+
+.collapse {
+  margin-left: 22%;
 }
 
 .why-us {
@@ -136,54 +167,9 @@ body {
   background-blend-mode: multiply;
 }
 
-.instrument {
-  height: 250px;
-  width: 250px;
-  padding: 10%;
-  text-align: center;
-  background: linear-gradient(180deg, #c66100 50%, rgba(198, 97, 0, 0) 100%);
-  background-blend-mode: color-burn;
-  mix-blend-mode: screen;
-  border-top-left-radius: 12%;
-  border-top-right-radius: 12%;
-}
-
-.col {
-  text-align: center;
-}
-
-.col1 {
-  width: 250px;
-  height: 250px;
-  margin: 15%;
-}
-
-.col1:hover {
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
-  transition: 1s ease;
-}
-
 .big {
   font-weight: 900;
   font-size: 75px;
-}
-
-.inst-text {
-  text-align: center;
-  color: white;
-  height: 48px;
-  width: 250px;
-  padding: 12px;
-
-  border-radius: 0px 0px 12px 12px;
-  background: radial-gradient(
-    242.23% 241.86% at 53.72% -58.25%,
-    #1c1e23 0%,
-    rgba(64, 70, 87, 0) 100%
-  );
-  backdrop-filter: blur(34px);
 }
 
 .eclipse {
@@ -216,9 +202,10 @@ body {
 }
 
 footer {
-  background-color: #7b2943;
+  background-color: #141129;
   height: 13%;
   text-align: center;
+  color: white !important;
 }
 
 .footer {
@@ -247,7 +234,7 @@ footer {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #ae3a5e;
+  background-color: #141129;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
@@ -273,6 +260,10 @@ footer {
     height: 70px !important;
     width: 70px !important;
   }
+
+  .collapse {
+    margin-left: 15%;
+  }
 }
 /* Large laptop screens */
 @media (min-width: 1439px) {
@@ -292,6 +283,10 @@ footer {
 
   .dropdown {
     padding-top: 1px;
+  }
+
+  .collapse {
+    margin-left: 0%;
   }
 }
 
@@ -432,7 +427,7 @@ input[type="radio"] {
 }
 
 .player {
-  background-color: #7b2943;
+  background-color: #272042;
   border-radius: 8px;
   min-width: 320px;
   padding: 16px 10px;
@@ -457,7 +452,7 @@ input[type="radio"] {
 }
 
 .song-info .title {
-  color: white;
+  color: white !important;
   font-size: 14px;
   line-height: 24px;
 }
@@ -470,34 +465,9 @@ input[type="radio"] {
 
 .subtitle,
 .time {
-  font-size: 12px;
+  font-size: 10px;
   line-height: 16px;
   color: #c6c5c6;
-}
-
-.time {
-  font-size: 12px;
-  line-height: 16px;
-  color: #a5a5a5;
-  font-weight: 500;
-  margin-left: auto;
-}
-
-.progress-bar {
-  height: 3px;
-  width: 100%;
-  background-color: #e9efff;
-  border-radius: 2px;
-  overflow: hidden;
-}
-
-.progress {
-  display: block;
-  position: relative;
-  width: 60%;
-  height: 100%;
-  background-color: #2992dc;
-  border-radius: 6px;
 }
 
 .info-area {
@@ -526,4 +496,19 @@ input[type="radio"] {
 
 #item-5:checked ~ .player #test {
   transform: translateY(-160px);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(0, 0, 0);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #30ff00);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #00c6ff);
 }
