--- a/instruments/instrument-styles/drum.css
+++ b/instruments/instrument-styles/drum.css
@@ -13,8 +13,6 @@ body {
   background-color: #141129;
   /* color: #94cfed; */
   color: aqua;
-  box-shadow: -931px 72px 117px 0px #2d9edd80 inset;
-  box-shadow: 0px 4px 62px 0px #2d9edd80;
 }
 
 .main {
@@ -31,30 +29,38 @@ body {
 .collapse,
 .container-fluid,
 .bg-body-tertiary {
-  /* background-color: #141129 !important; */
-  background-color: #ae3a5e !important;
+  background-color: #141129 !important;
   color: white;
 }
 
 .navi {
   position: fixed;
   width: 100%;
-  z-index: 3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  z-index: 2;
 }
 
 .navbar-custom {
   display: flex;
-  height: 60px;
+  height: 70px;
   padding: 16px 80px;
   align-items: center;
   flex-shrink: 0;
+  border-bottom-width: 1px;
+  border-color: #00c6ff;
+  border-bottom-style: dashed;
+}
+
+hr {
+  border: 1px dashed #00c6ff;
+  width: 100%;
+  opacity: 0.7;
 }
 
 footer {
-  background-color: #ae3a5e;
+  background-color: #141129;
   height: 13%;
   text-align: center;
+  margin: 20px;
 }
 
 .footer {
@@ -190,6 +196,34 @@ footer {
   padding: 1%;
 }
 
+.dropdown-content a {
+  color: white;
+}
+
+.dropdown-content a:hover {
+  color: aqua;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  padding-top: 8px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #141129;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
 /* small and medium laptop screens */
 @media (min-width: 991px) and (max-width: 1430px) {
   .instrument,
@@ -239,6 +273,11 @@ footer {
     padding: 15% 0% 5% 0%;
   }
 
+  .play h1 {
+    font-size: 48px;
+    padding: 20px;
+  }
+
   .responsive-img {
     width: 100%;
     height: auto;
@@ -276,8 +315,8 @@ footer {
     padding: 5px 5px;
   }
 
-  .play {
-    padding: 20% 0% 5% 0%;
+  .glass {
+    border-radius: 60px;
   }
 
   .Y {
@@ -311,12 +350,12 @@ footer {
   }
 
   .S {
-    right: 70%;
+    right: 72%;
     top: 36%;
   }
 
   .D {
-    right: 63%;
+    right: 65%;
     top: 36%;
   }
 
