--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ a:active {
 .glow {
   text-shadow: 1px 1px 2px black, 0 0 0.1em aqua, 0 0 0.1em aqua;
   color: #95cfec;
-  font-size: 30px;
+  font-size: 25px;
   padding-top: 5%;
 }
 
@@ -169,10 +169,13 @@ a:active {
   background-blend-mode: multiply;
 }
 
+@import url("https://fonts.cdnfonts.com/css/against-2");
+@import url("https://fonts.cdnfonts.com/css/against");
+
 .big {
-  font-weight: 900;
-  font-size: 75px;
-  font-family: "";
+  font-size: 65px;
+  font-family: "against-Regular";
+  padding-top: 15px;
 }
 
 .eclipse {
@@ -330,12 +333,11 @@ footer {
   }
 
   .big {
-    font-weight: 900;
-    font-size: 32px;
+    font-size: 30px;
   }
 
   .glow {
-    font-size: 25px;
+    font-size: 15px;
   }
 
   .eclipse {
