--- a/css/faq.css
+++ b/css/faq.css
@@ -97,6 +97,7 @@ img {
   padding-top: 15px;
   color: #00c6ff;
   text-align: center;
+  padding-bottom: 5%;
 }
 
 .small {
@@ -107,10 +108,33 @@ img {
   text-align: center;
 }
 
+.small2 {
+  font-size: 20px;
+  font-family: "against-Regular";
+  padding-top: 15px;
+  padding-bottom: 10px;
+  color: #00c6ff;
+  text-align: center;
+}
+
 #faq {
-  height: auto;
+  height: fit-content;
   margin-top: 8%;
   padding: 0% 10%;
+}
+
+#video {
+  height: fit-content;
+  margin-top: 8%;
+  padding: 0% 15%;
+  text-align: center;
+}
+
+video {
+  height: auto;
+  width: 700px;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 
 .eclipse {
@@ -156,11 +180,12 @@ hr {
 
 .accordion-button {
   background-color: #141129;
-  color: #00c6ff;
+  color: white;
 }
 
 .accordion-button::after {
-  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-circle' viewBox='0 0 16 16'><path d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/><path d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/></svg>");
+  /* background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-circle' viewBox='0 0 16 16'><path d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/><path d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/></svg>"); */
+  background-image: url("/images/add.png");
 }
 .accordion-button:not(.collapsed)::after {
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-dash-circle' viewBox='0 0 16 16'><path d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/><path d='M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z'/></svg>");
@@ -277,6 +302,10 @@ footer {
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     opacity: 0.6;
+  }
+
+  #faq {
+    margin-top: 16%;
   }
 }
 
