change video to gif

--- a/css/faq.css
+++ b/css/faq.css
@@ -130,7 +130,7 @@ img {
   text-align: center;
 }
 
-video {
+.gif {
   height: auto;
   width: 700px;
   padding-top: 20px;
@@ -144,6 +144,7 @@ video {
   border-top-right-radius: 25px;
   opacity: 0.6;
   height: 50%;
+  z-index: -1;
 }
 
 .eclipse2 {
@@ -154,6 +155,7 @@ video {
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
   opacity: 0.6;
+  z-index: -1;
 }
 
 hr {
@@ -185,7 +187,7 @@ hr {
 
 .accordion-button::after {
   /* background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-circle' viewBox='0 0 16 16'><path d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/><path d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/></svg>"); */
-  background-image: url("/images/add.png");
+  background-image: url("../images/add.png");
 }
 .accordion-button:not(.collapsed)::after {
   background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-dash-circle' viewBox='0 0 16 16'><path d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/><path d='M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z'/></svg>");
@@ -306,6 +308,13 @@ footer {
 
   #faq {
     margin-top: 16%;
+  }
+
+  .gif {
+    height: 100%;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 40px;
   }
 }
 
