--- a/instruments/instrument-styles/pan-flute.css
+++ b/instruments/instrument-styles/pan-flute.css
@@ -11,8 +11,7 @@ html {
 body {
   overflow-x: hidden;
   background-color: #141129;
-  /* color: #94cfed; */
-  color: aqua;
+  color: #00c6ff;
   box-shadow: -931px 72px 117px 0px #2d9edd80 inset;
   box-shadow: 0px 4px 62px 0px #2d9edd80;
 }
@@ -35,6 +34,12 @@ body {
   color: white;
 }
 
+.navbar-brand {
+  font-family: "Midorima - Personal Use Regular";
+  font-style: normal;
+  font-weight: 100;
+}
+
 .navi {
   position: fixed;
   width: 100%;
@@ -51,6 +56,20 @@ body {
   border-bottom-width: 1px;
   border-color: #00c6ff;
   border-bottom-style: dashed;
+}
+
+.big {
+  font-size: 70px;
+  font-family: "against-Regular";
+  color: #00c6ff;
+  text-align: center;
+}
+
+.small {
+  font-size: 30px;
+  font-family: "against-Regular";
+  color: #00c6ff;
+  text-align: center;
 }
 
 footer {
