--- a/instruments/instrument-styles/xylophone.css
+++ b/instruments/instrument-styles/xylophone.css
@@ -11,8 +11,7 @@ html {
 body {
   overflow-x: hidden;
   background-color: #141129;
-  /* color: #94cfed; */
-  color: aqua;
+  color: #00c6ff;
   box-shadow: -931px 72px 117px 0px #2d9edd80 inset;
   box-shadow: 0px 4px 62px 0px #2d9edd80;
 }
@@ -33,6 +32,12 @@ body {
 .bg-body-tertiary {
   background-color: #141129 !important;
   color: white;
+}
+
+.navbar-brand {
+  font-family: "Midorima - Personal Use Regular";
+  font-style: normal;
+  font-weight: 100;
 }
 
 .navi {
@@ -57,6 +62,20 @@ hr {
   border: 1px dashed #00c6ff;
   width: 100%;
   opacity: 0.7;
+}
+
+.small {
+  font-size: 30px;
+  font-family: "against-Regular";
+  color: #00c6ff;
+  text-align: center;
+}
+
+.big {
+  font-size: 70px;
+  font-family: "against-Regular";
+  color: #00c6ff;
+  text-align: center;
 }
 
 footer {
