--- a/instruments/instrument-styles/drum.css
+++ b/instruments/instrument-styles/drum.css
@@ -14,6 +14,13 @@ body {
   color: #00c6ff;
 }
 
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
 .main {
   padding: 0px;
   margin: 0px;
@@ -69,7 +76,7 @@ hr {
 }
 
 .small {
-  font-size: 30px;
+  font-size: 35px;
   font-family: "against-Regular";
   color: #00c6ff;
   text-align: center;
@@ -206,7 +213,7 @@ footer {
 }
 
 .info {
-  text-align: left;
+  text-align: center;
   padding: 5% 15% 5% 15%;
   font-size: 20px;
 }
@@ -297,7 +304,7 @@ footer {
   .responsive-img {
     width: 100%;
     height: auto;
-    padding-top: 10%;
+    padding-top: 7%;
   }
 
   .play {
