--- a/instruments/instrument-styles/guitar.css
+++ b/instruments/instrument-styles/guitar.css
@@ -14,6 +14,13 @@ body {
   color: #00c6ff;
 }
 
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
 .main {
   padding: 0px;
   margin: 0px;
@@ -70,7 +77,7 @@ hr {
 }
 
 .small {
-  font-size: 30px;
+  font-size: 35px;
   font-family: "against-Regular";
   color: #00c6ff;
   text-align: center;
@@ -205,7 +212,7 @@ footer {
 }
 
 .info {
-  text-align: left;
+  text-align: center;
   padding: 5% 15% 5% 15%;
   font-size: 20px;
 }
@@ -280,6 +287,25 @@ footer {
     margin-top: 5%;
   }
 }
+
+/* screens between tablets and laptops */
+@media (min-width: 770px) and (max-width: 990px) {
+  .eclipse,
+  .eclipse2 {
+    visibility: hidden;
+  }
+
+  .responsive-img {
+    width: 100%;
+    height: auto;
+    padding-top: 5%;
+  }
+
+  .play {
+    padding: 20px 30px;
+  }
+}
+
 /* screens below tablets */
 @media (max-width: 768px) {
   .logo {
