--- a/instruments/instrument-styles/pan-flute.css
+++ b/instruments/instrument-styles/pan-flute.css
@@ -16,6 +16,13 @@ body {
   box-shadow: 0px 4px 62px 0px #2d9edd80;
 }
 
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
 .main {
   padding: 0px;
   margin: 0px;
@@ -223,7 +230,7 @@ footer {
 }
 
 .info {
-  text-align: left;
+  text-align: center;
   padding: 5% 15% 5% 15%;
   font-size: 20px;
 }
@@ -304,6 +311,25 @@ hr {
     margin-top: 5%;
   }
 }
+
+/* screens between tablets and laptops */
+@media (min-width: 770px) and (max-width: 990px) {
+  .eclipse,
+  .eclipse2 {
+    visibility: hidden;
+  }
+
+  .responsive-img {
+    width: 100%;
+    height: auto;
+    padding-top: 6%;
+  }
+
+  .play {
+    padding: 20px 30px;
+  }
+}
+
 /* screens below tablets */
 @media (max-width: 768px) {
   .logo {
