--- a/instruments/instrument-styles/xylophone.css
+++ b/instruments/instrument-styles/xylophone.css
@@ -16,6 +16,13 @@ body {
   box-shadow: 0px 4px 62px 0px #2d9edd80;
 }
 
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
+
 .main {
   padding: 0px;
   margin: 0px;
@@ -65,7 +72,7 @@ hr {
 }
 
 .small {
-  font-size: 30px;
+  font-size: 35px;
   font-family: "against-Regular";
   color: #00c6ff;
   text-align: center;
@@ -218,7 +225,7 @@ footer {
 }
 
 .info {
-  text-align: left;
+  text-align: center;
   padding: 5% 15% 5% 15%;
   font-size: 20px;
 }
@@ -313,6 +320,24 @@ footer {
   .eclipse,
   .eclipse2 {
     visibility: hidden;
+  }
+}
+
+/* screens between tablets and laptops */
+@media (min-width: 770px) and (max-width: 990px) {
+  .eclipse,
+  .eclipse2 {
+    visibility: hidden;
+  }
+
+  .responsive-img {
+    width: 100%;
+    height: auto;
+    padding-top: 5%;
+  }
+
+  .play {
+    padding: 20px 30px;
   }
 }
 
