--- a/instruments/instrument-styles/guitar.css
+++ b/instruments/instrument-styles/guitar.css
@@ -362,3 +362,18 @@ footer {
     font-size: 9px;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(0, 0, 0);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #00c6ff);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #95cfec);
+}
