--- a/instruments/instrument-styles/pan-flute.css
+++ b/instruments/instrument-styles/pan-flute.css
@@ -461,3 +461,18 @@ hr {
     top: 10%;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(0, 0, 0);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #00c6ff);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #95cfec);
+}
