--- a/instruments/instrument-styles/piano.css
+++ b/instruments/instrument-styles/piano.css
@@ -670,3 +670,18 @@ footer {
     top: 60%;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: rgb(0, 0, 0);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, #00c6ff);
+  border-radius: 1px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent, #95cfec);
+}
