--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,11 @@ a:active {
   width: 100%;
   height: 100%;
   margin: 0px;
+  transition: transform 1s;
+}
+
+.hero:hover {
+  transform: scale(1.05);
 }
 
 .navbar-brand {
@@ -339,8 +344,11 @@ footer {
   }
 
   .hero {
-    padding-top: 20%;
-    height: 50%;
+    padding-top: 17%;
+    height: 100%;
+    width: fit-content;
+    right: 50%;
+    position: relative;
   }
 
   .big {
